# celery_startup_project

./: README.md  pyproject.toml  requirements.txt  tasks.py
src/my_celery_app/: celery_app.py  task_manager.py
src/my_celery_app/tasks/: __init__.py  debug.py  regular_tasks.py
src/myapp/: capp.py  tasks.py
tests/: conftest.py  test_files.py
worker/: __init__.py  app.py
