[tool.poetry]
name = "celery-startup-project" # how is handled with pip
version = "0.1.0"
description = "A study about testing a celery application with pytest and postgresql"
authors = ["vesnikos <nick.ves@glasgow.ac.uk>"]
readme = "README.md"
packages = [
    {include = "my_celery_app", from = "src"}, # my_celery_app is how import it
]


[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["pytest"], version = "^5.2.7"}
pytest = "^7.2.2"
poethepoet = "^0.18.1"
sqlalchemy = "^2.0.6"
psycopg = "^3.1.8"
pytest-postgresql = "^4.1.1"
mypy = "^1.1.1"
celery-types = "^0.14.0"
black = "^24.3.0"
isort = "^5.12.0"
celery-stubs = "^0.1.3"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest"
uninstall = "pip uninstall celery-startup-project"
format = [
    {cmd = "isort src tests"},
    {cmd = "black src tests"},
]

[tool.pytest.ini_options]
pythonpath  = "src"
postgresql_user = "postgres"
postgresql_password = "postgres"
postgresql_dbname = 'celery-test'